using System;
using System.Collections;
using System.Collections.Generic;
using UnityEngine;
using UnityEngine.InputSystem;

public class CharacterMovement : MonoBehaviour
{
	private int isWalkingHash;
	
	private float walkMultiplier = 6.0f;
	private float rotationFactorPerFrame = 15.0f;
	private float gravity = -9.81f;
	private float animationFinishTime = 0.9f;

	private bool isMovementPressed;
	private bool isWalking;
	private bool isAttacking;

	private PlayerInput playerInput;
	private CharacterController characterController;
	private Animator animator;
	private Rigidbody myRigidbody;

	private Vector2 currentMovementInput;
	private Vector3 currentMovement;
	private Vector3 currentRunMovement;
	private Vector3 positionToLookAt;
	private Vector3 velocity;

	private Quaternion currentRotation;
	private Quaternion targetRotation;

	[Header("Ground Detection")]
	[SerializeField] private Transform groundCheck;
	[SerializeField] private float groundRadius;
	[SerializeField] private LayerMask whatIsGround;
	[SerializeField] private bool isGrounded;


	void Awake()
	{
		playerInput = new PlayerInput();
		characterController = GetComponent<CharacterController>();
		animator = GetComponent<Animator>();

		isWalkingHash = Animator.StringToHash("isWalking");		

		playerInput.CharacterControls.Movement.started += OnMovementInput;
		playerInput.CharacterControls.Movement.canceled += OnMovementInput;
		playerInput.CharacterControls.Movement.performed += OnMovementInput;

		playerInput.CharacterControls.Attack.performed += context => Attack();		
	}

	void Update()
	{
		isGrounded = Physics.CheckSphere(groundCheck.position, groundRadius, (int)whatIsGround);

		HandleAnimation();
		HandleRotation();

		velocity.y += gravity * Time.deltaTime;
		characterController.Move(velocity * Time.deltaTime);


		if (isMovementPressed && isGrounded)
		{
			characterController.Move(currentMovement * Time.deltaTime);
		}

		if (isAttacking && animator.GetCurrentAnimatorStateInfo(1).normalizedTime >= animationFinishTime)
		{
			isAttacking = false;
		}
	}

	void OnMovementInput(InputAction.CallbackContext context)
	{
		currentMovementInput = context.ReadValue<Vector2>();

		currentMovement.x = currentMovementInput.x * walkMultiplier;
		currentMovement.z = currentMovementInput.y * walkMultiplier;		

		isMovementPressed = currentMovementInput.x != 0 || currentMovementInput.y != 0;
	}

	void HandleRotation()
	{
		positionToLookAt.x = currentMovement.x;
		positionToLookAt.y = 0.0f;
		positionToLookAt.z = currentMovement.z;

		currentRotation = transform.rotation;

		if (isMovementPressed)
		{
			targetRotation = Quaternion.LookRotation(positionToLookAt);
			transform.rotation = Quaternion.Slerp(currentRotation, targetRotation, rotationFactorPerFrame * Time.deltaTime);
		}
	}

	void HandleAnimation()
	{
		isWalking = animator.GetBool(isWalkingHash);

		if (isMovementPressed && !isWalking)
		{
			animator.SetBool(isWalkingHash, true);
		}
		else if (!isMovementPressed && isWalking)
		{
			animator.SetBool(isWalkingHash, false);
		}		
	}

	void Attack()
	{
		if(!isAttacking)
		{
			animator.SetTrigger("isAttacking");
			StartCoroutine(InitialiseAttack());
		}
	}

	IEnumerator InitialiseAttack()
	{
		yield return new WaitForSeconds(0.1f);
		isAttacking = true;
	}

	void OnEnable()
	{
		playerInput.CharacterControls.Enable();
	}

	void OnDisable()
	{
		playerInput.CharacterControls.Disable();
	}
}
